@@ -1,3 +1,15 @@
+2010-01-06  Dimitri Glazkov  <dglazkov@chromium.org>
+
+        Reviewed by Nikolas Zimmermann.
+
+        [V8] IsRefPtrType() in CodeGeneratorV8.pm increases maintenance burden.
+        https://bugs.webkit.org/show_bug.cgi?id=32994
+
+        Refactoring, covered by existings tests.
+
+        * bindings/scripts/CodeGeneratorV8.pm: Reversed testing for ref-counted objects,
+            since there's a much smaller (and more stable) set of non-ref-counted ones.
+
 2010-01-06  Kelly Norton  <knorton@google.com>
 
         Reviewed by Pavel Feldman.
